# ecelgamal

./: .gitignore  .travis.yml  LICENSE  Readme.md  pom.xml
native/: CMakeLists.txt  compile-and-install.sh  crtecelgamal.c  crtecelgamal.h  crtecelgamal_jni_wrapper.c  ecelgamal.c  ecelgamal.h  testing.cpp
native/include/: uthash.h
src/main/java/ch/ethz/dsg/ecelgamal/: ECElGamal.java
src/main/resources/: libecelgamal-jni-wrapper.dylib
src/test/java/: ECElGamalTest.java
